# dogfish

./: .gitignore  Cargo.toml
src/: lib.rs
src/board/: bitboards.rs  castling.rs  colour.rs  fen.rs  mailbox.rs  mod.rs  piece.rs  piecetype.rs  search.rs  state.rs
src/board_representation/: mailbox.rs  mod.rs  square.rs
src/board_representation/bitboard/: files.rs  files_ranks.rs  mod.rs  ops.rs  ranks.rs  shift.rs
src/common/: colour.rs  distance.rs  line.rs  mod.rs  moves.rs  players.rs
src/moves/: mod.rs  types.rs
src/piece/: attacks.rs  colour.rs  mod.rs  piecetype.rs
src/piece/attacks/: king.rs  knight.rs  magic.rs  mod.rs
