[package]
name = "dogfish"
version = "0.1.0"
authors = ["Anson <git@anson-cheung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
itertools = "0.9.0"
num = "0.2.1"
num-derive = "0.3.0"
num-traits = "0.2.11"

[lib]
name = "dogfish"
path = "src/lib.rs"

[[bin]]
name = "dogfish-runner"
path = "src/runner/main.rs"